welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:17: error: not found: value PorteBiscuit
if (PorteBiscuit){
    ^